--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-        background-image: url('https://static.vecteezy.com/system/resources/previews/001/953/845/non_2x/retro-futurism-style-with-purple-space-background-free-vector.jpg');
+        background-image: url('https://cdn.theatlantic.com/thumbor/Lt5mJ1Dtc1gznJ-_Dvqj7wgCRg4=/25x120:4837x2827/1600x900/media/img/mt/2016/01/crabnebula/original.jpg');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
